ansible_scripts/roles/install_apps/opentelemetry/files/otel_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
        - path: /otel
          pathType: Prefix
          backend:
            service:
              name: test-collector
              port:
                number: 4317
